Print out backend

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "dependencies": {
     "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-node-gpu": "^4.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
